--- a/GenderHealthCare/src/main/resources/application.properties
+++ b/GenderHealthCare/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=GenderHealthCare
+spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
+spring.datasource.username=root
+spring.datasource.password=123456
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.main.allow-circular-references=true
