Login by Google

--- a/GenderHealthCare/src/main/resources/application.properties
+++ b/GenderHealthCare/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-circular-references=true
+jwt.secret=S9aBd$2jL%qFw#v8H7yNz@bXeP1rGzXk6xYp#uPdLtn&z1d^QsE3Gf^C9
+google.client.id=438003953958-oesaripp02cu1967khsrfaejs679quh5.apps.googleusercontent.com
+
