--- a/GenderHealthCare/src/main/resources/application.properties
+++ b/GenderHealthCare/src/main/resources/application.properties
@@ -8,9 +8,15 @@ spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-circular-references=true
 
 jwt.secret=S9aBd$2jL%qFw#v8H7yNz@bXeP1rGzXk6xYp#uPdLtn&z1d^QsE3Gf^C9
-
+google.client.id=438003953958-oesaripp02cu1967khsrfaejs679quh5.apps.googleusercontent.com
 spring.security.oauth2.client.registration.facebook.client-id=1074371737890073
 spring.security.oauth2.client.registration.facebook.client-secret=dc983d8b48c37599f336a8176f7790be
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+spring:
+  cache:
+   type: caffeine
+
+caffeine:
+  spec: maximumSize=1000,expireAfterWrite=30s
 
