--- a/GenderHealthCare/src/main/resources/application.properties
+++ b/GenderHealthCare/src/main/resources/application.properties
@@ -13,6 +13,15 @@ spring.security.oauth2.client.registration.facebook.client-id=1074371737890073
 spring.security.oauth2.client.registration.facebook.client-secret=dc983d8b48c37599f336a8176f7790be
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your_email@gmail.com
+spring.mail.password=your_app_password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring:
   cache:
    type: caffeine
