--- a/GenderHealthCare/src/main/resources/application.properties
+++ b/GenderHealthCare/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your_email@gmail.com
-spring.mail.password=your_app_password
+spring.mail.username=quangndse180246@fpt.edu.vn
+spring.mail.password=jife pqdv tpvt ybot
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -27,5 +27,5 @@ spring:
    type: caffeine
 
 caffeine:
-  spec: maximumSize=1000,expireAfterWrite=30s
+  spec: maximumSize=1000,expireAfterWrite=360s
 
