Refractor src code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=quangndse180246@fpt.edu.vn
-spring.mail.password=jife pqdv tpvt ybot
+spring.mail.username=sheathcare2025@gmail.com
+spring.mail.password=dynx mzlc suut mmld
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
