View Schedule Of Consultant

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.mail.username=sheathcare2025@gmail.com
 spring.mail.password=dynx mzlc suut mmld
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+logging.level.org.springframework.beans.factory=DEBUG
 spring:
   cache:
    type: caffeine
