--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port = 8083
-#spring.application.name=GenderHealthCare
-#spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
-#spring.datasource.username=root
-#spring.datasource.password=123456
-
-spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
+spring.application.name=GenderHealthCare
+spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
 spring.datasource.username=root
 spring.datasource.password=123456
+
+#spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
+#spring.datasource.username=root
+#spring.datasource.password=123456
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
