--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,20 @@ spring.security.oauth2.client.registration.facebook.client-secret=dc983d8b48c375
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 
+momo.partner.code=MOMO
+momo.access.key=F8BBA842ECF85
+momo.secret.key=K951B6PE1waDMi640xX08PD3vg6EkVlz
+momo.endpoint=https://test-payment.momo.vn/v2/gateway/api/create
+momo.redirect.url=http://localhost:8080/api/payment/momo/return
+momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
+
+
+# Thông tin Merchant Sandbox t? VNPay demo (m?c ?ích h?c thu?t)
+vnpay.tmn-code=8L70A4M9
+vnpay.hash-secret=6G2LAMW0YI3UL5NI4JU9FV2EQM2M2VQG
+vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.return-url=http://127.0.0.1/api/payment/vnpay/return
+vnpay.ipn-url=http://127.0.0.1/api/payment/vnpay/ipn
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
