--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,12 +27,13 @@ momo.access.key=F8BBA842ECF85
 momo.secret.key=K951B6PE1waDMi640xX08PD3vg6EkVlz
 momo.endpoint=https://test-payment.momo.vn/v2/gateway/api/create
 momo.redirect.url=http://localhost:8080/api/payment/momo/return
+momo.notify.url=http://localhost:8080/api/payment/momo/notify
 momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
 
 
 # Thông tin Merchant Sandbox t? VNPay demo (m?c ?ích h?c thu?t)
-vnpay.tmn-code=8L70A4M9
-vnpay.hash-secret=6G2LAMW0YI3UL5NI4JU9FV2EQM2M2VQG
+vnpay.tmn-code=IAHK22TZ
+vnpay.hash-secret=RL1C4JUG3TI44VIMYFR4QKPYJEGDBIIO
 vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 vnpay.return-url=http://127.0.0.1/api/payment/vnpay/return
 vnpay.ipn-url=http://127.0.0.1/api/payment/vnpay/ipn
