--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,8 @@ momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
 
 
 # Thông tin Merchant Sandbox t? VNPay demo (m?c ?ích h?c thu?t)
+vnpay.tmnCode=IGXBSMEO
+vnpay.hashSecret=HAMS4XOHN2TVP2O8454WXIUYPQEUFUSH
 vnpay.tmn-code=IAHK22TZ
 vnpay.hash-secret=RL1C4JUG3TI44VIMYFR4QKPYJEGDBIIO
 vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
