--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.mail.default-encoding=UTF-8
+
+# Cloudinary Configuration
+cloudinary.cloud_name=shealth
+cloudinary.api_key=477861366363214
+cloudinary.api_secret=lhdqdtqsMjfVLIWx7bfEya4x9U8
