--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,12 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.1.3.RELEASE</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
