--- a/pom.xml
+++ b/pom.xml
@@ -155,11 +155,17 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.1.3.RELEASE</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core -->
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>com.cloudinary</groupId>-->
+<!--			<artifactId>cloudinary-core</artifactId>-->
+<!--			<version>2.3.0</version>-->
+<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
 		<dependency>
 			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary-core</artifactId>
-			<version>2.3.0</version>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.39.0</version>
 		</dependency>
 	</dependencies>
 
