--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ momo.partner.code=MOMO
 momo.access.key=F8BBA842ECF85
 momo.secret.key=K951B6PE1waDMi640xX08PD3vg6EkVlz
 momo.endpoint=https://test-payment.momo.vn/v2/gateway/api/create
-momo.redirect.url=http://localhost:8084/api/payment/momo/return
+momo.redirect.url=http://localhost:5173/services
 momo.notify.url=http://localhost:8084/api/payment/momo/notify
 momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
 
