--- a/pom.xml
+++ b/pom.xml
@@ -155,12 +155,11 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.1.3.RELEASE</version>
 		</dependency>
-<!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>com.cloudinary</groupId>-->
-<!--			<artifactId>cloudinary-core</artifactId>-->
-<!--			<version>2.3.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
 		<dependency>
 			<groupId>com.cloudinary</groupId>
