--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8085
+server.port = 8080
 spring.application.name=GenderHealthCare
 spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
 spring.datasource.username=root
@@ -57,6 +57,6 @@ spring.thymeleaf.mode=HTML
 spring.mail.default-encoding=UTF-8
 
 # Cloudinary Configuration
-cloudinary.cloud_name=shealth
+cloudinary.cloud_name=dnd3u2eq5
 cloudinary.api_key=477861366363214
 cloudinary.api_secret=lhdqdtqsMjfVLIWx7bfEya4x9U8
