metting zoom api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ momo.notify.url=http://localhost:8084/api/payment/momo/notify
 momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
 
 
-# Thông tin Merchant Sandbox t? VNPay demo (m?c ?ích h?c thu?t)
+# Th?ng tin Merchant Sandbox t? VNPay demo (m?c ??ch h?c thu?t)
 vnpay.tmnCode=IGXBSMEO
 vnpay.hashSecret=HAMS4XOHN2TVP2O8454WXIUYPQEUFUSH
 vnpay.tmn-code=IAHK22TZ
@@ -60,3 +60,7 @@ spring.mail.default-encoding=UTF-8
 cloudinary.cloud_name=dnd3u2eq5
 cloudinary.api_key=477861366363214
 cloudinary.api_secret=lhdqdtqsMjfVLIWx7bfEya4x9U8
+
+zoom.client-id=rr_MjnbwRPaGDLhXFn8wVg
+zoom.client-secret=j4f8mX1luB0qAKbOXWflYI4dW8KH6htW
+zoom.account-id=mNEmaCndRIWt0UbVPErkZw
