--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,9 @@ spring.mail.default-encoding=UTF-8
 cloudinary.cloud_name=dnd3u2eq5
 cloudinary.api_key=477861366363214
 cloudinary.api_secret=lhdqdtqsMjfVLIWx7bfEya4x9U8
+
+# T?ng kích th??c t?i ?a cho file t?i lên
+spring.servlet.multipart.max-file-size=10MB
+# T?ng kích th??c t?i ?a cho toàn b? request
+spring.servlet.multipart.max-request-size=15MB
+
