send email reminder, confirm, cancel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,9 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.mail.default-encoding=UTF-8
 
+# Frontend URL for email links
+app.frontend.url=http://localhost:3000
+
 # Cloudinary Configuration
 cloudinary.cloud_name=dnd3u2eq5
 cloudinary.api_key=477861366363214
