update return url vnpay
update return url vnpay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ vnpay.hashSecret=HAMS4XOHN2TVP2O8454WXIUYPQEUFUSH
 vnpay.tmn-code=IAHK22TZ
 vnpay.hash-secret=RL1C4JUG3TI44VIMYFR4QKPYJEGDBIIO
 vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.return-url=http://127.0.0.1/api/payment/vnpay/return
+vnpay.return-url=http://localhost:5173/user/booking
 vnpay.ipn-url=http://127.0.0.1/api/payment/vnpay/ipn
 
 spring.mail.host=smtp.gmail.com
