--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ momo.notify.url=http://localhost:8084/api/payment/momo/notify
 momo.ipn.url=http://localhost:8080/api/payment/momo/ipn
 
 
-# Thông tin Merchant Sandbox t? VNPay demo (m?c ?ích h?c thu?t)
+# Thong tin Merchant Sandbox tu VNPay demo (muc dich hoc thuat)
 vnpay.tmnCode=IGXBSMEO
 vnpay.hashSecret=HAMS4XOHN2TVP2O8454WXIUYPQEUFUSH
 vnpay.tmn-code=IAHK22TZ
@@ -44,12 +44,8 @@ spring.mail.password=dynx mzlc suut mmld
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.beans.factory=DEBUG
-spring:
-  cache:
-   type: caffeine
-
-caffeine:
-  spec: maximumSize=1000,expireAfterWrite=30s
+spring.cache.type=caffeine
+caffeine.spec=maximumSize=1000,expireAfterWrite=30s
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -61,9 +57,9 @@ cloudinary.cloud_name=dnd3u2eq5
 cloudinary.api_key=477861366363214
 cloudinary.api_secret=lhdqdtqsMjfVLIWx7bfEya4x9U8
 
-# T?ng kích th??c t?i ?a cho file t?i lên
+# Tong kich thuoc toi da cho file tai len
 spring.servlet.multipart.max-file-size=10MB
-# T?ng kích th??c t?i ?a cho toàn b? request
+# Tong kich thuoc toi da cho toan bo request
 spring.servlet.multipart.max-request-size=15MB
 
 
