--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8080
 spring.application.name=GenderHealthCare
-spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://14.225.192.15/genderhealthcare
+spring.datasource.username=team
+spring.datasource.password=12345678
 #spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
 #spring.datasource.username=root
 #spring.datasource.password=123456
