--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port = 8080
+server.port = 8085
+server.address=0.0.0.0
 spring.application.name=GenderHealthCare
-spring.datasource.url=jdbc:mysql://14.225.192.15/genderhealthcare
+spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
 spring.datasource.username=team
 spring.datasource.password=12345678
 #spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
@@ -9,6 +10,14 @@ spring.datasource.password=12345678
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-circular-references=true
+
+# Database Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=900000
+spring.datasource.hikari.leak-detection-threshold=60000
 
 
 
@@ -46,6 +55,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.beans.factory=DEBUG
 spring.cache.type=caffeine
 caffeine.spec=maximumSize=1000,expireAfterWrite=30s
+
+# WebSocket Settings
+spring.websocket.sockjs.heartbeat.time=25000
+spring.websocket.sockjs.disconnect.delay=5000
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
