--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 server.address = 0.0.0.0
 spring.application.name=GenderHealthCare
-spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
+spring.datasource.url=jdbc:mysql://localhost:3306/deploy
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
