--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-server.port = 8080
+server.port = 8085
 server.address = 0.0.0.0
 spring.application.name=GenderHealthCare
 spring.datasource.url=jdbc:mysql://localhost:3306/genderhealthcare
-#spring.datasource.url=jdbc:mysql://localhost:3306/deploy
-spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://14.225.198.16:3306/swp
-#spring.datasource.username=root
-#spring.datasource.password=123456
+spring.datasource.username=team
+spring.datasource.password=12345678
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-circular-references=true
